# End-to-End_Stochastic_Portfolio_Engine_with_Regime_Detection_via_HMM

./: .dockerignore  .gitignore  Dockerfile  Gemfile  QUICK_START_GUIDE.md  README.md  _config.yml  about.md  contact.md  demo.py  demo_advanced_backtesting.py  demo_realtime_data_integration.py  docker-compose.yml  documentation.md  generate_comprehensive_data.py  index.md  pyproject.toml  requirements.txt  results.md  run_my_portfolio.py  setup.py  start.py  streamlit_app.py  streamlit_requirements.txt  test_streamlit_app.py
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
backup/: README_backup.md  main_backup.py
config/: config.yaml
deploy/: README.md  heroku.json  kubernetes.yaml  streamlit-cloud.toml
docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md
k8s/production/: deployment.yaml
portfolio-website/: .gitignore  Gemfile  README.md  _config.yml  about.md  code.md  documentation.md  index.md  manifest.json  research.md  results.md  robots.txt
portfolio-website/.well-known/: security.txt
portfolio-website/_includes/: analytics.html  footer.html  header.html  monitoring.html  professional-branding.html  security-headers.html  seo.html  social-networking.html
portfolio-website/_layouts/: default.html  home.html  page.html
portfolio-website/_sass/: _base.scss  _documentation.scss  _header.scss  _home.scss  _results.scss
scripts/: install.sh
src/analytics/: performance_attribution.py
src/monitoring/: metrics.py
tests/: test_hmm_engine.py  test_portfolio_optimizer.py
(+58 files in other folders)
